--- a/package.json
+++ b/package.json
@@ -18,13 +18,10 @@
     "kill-ng": "killall \"ng serve\"",
     "prepare": "husky install",
     "prettier": "prettier --check src/**/*.ts",
-    "start:all": "concurrently -c \"bgBlue.bold,bgMagenta.bold\" --prefix \"{time}-{pid}\"  \"npm:start:ng\" \"npm:start:json-server\" --kill-others",
     "start:json-server": "cd backend && json-server --watch db_v2.json",
     "start": "ng serve  --watch",
     "test": "ng test",
-    "test:nyc": "nyc --reporter=html --produce-source-map --reporter=text npm test",
-    "test:e2e": "ng e2e",
-    "prerender": "ng run 3d-inventory-angular-ui:prerender"
+    "test:nyc": "nyc --reporter=html --produce-source-map --reporter=text npm test"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
@@ -32,22 +29,21 @@
   "dependencies": {
     "@angular/animations": "^15.2.8",
     "@angular/common": "^15.2.8",
-    "@angular/compiler": "^16.0.5",
+    "@angular/compiler": "^15.2.8",
     "@angular/core": "^15.2.8",
     "@angular/forms": "^15.2.8",
-    "@angular/material": "^16.0.4",
-    "@angular/platform-browser": "^16.0.5",
+    "@angular/material": "^15.2.8",
+    "@angular/platform-browser": "^15.2.8",
     "@angular/platform-browser-dynamic": "^15.2.8",
     "@angular/platform-server": "^15.2.8",
     "@angular/router": "^15.2.8",
     "@compodoc/compodoc": "^1.1.21",
-    "@ng-bootstrap/ng-bootstrap": "^14.1.1",
-    "@nguniversal/express-engine": "^16.0.2",
+    "@ng-bootstrap/ng-bootstrap": "^14.2.0",
+    "@nguniversal/express-engine": "^15.2.1",
     "@types/lodash": "^4.14.195",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
     "chalk": "^5.2.0",
-    "concurrently": "^8.0.1",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "express": "^4.18.2",
@@ -75,14 +71,14 @@
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.7",
-    "@angular/cli": "^16.0.5",
+    "@angular-devkit/build-angular": "^15.2.8",
+    "@angular/cli": "^15.2.8",
     "@angular/compiler-cli": "^15.2.8",
     "@angular/localize": "^15.2.8",
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@nguniversal/builders": "^15.2.1",
     "@types/cors": "^2.8.13",
-    "@types/eslint": "^8.40.0",
+    "@types/eslint": "^8.40.1",
     "@types/eslint-config-prettier": "^6.11.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~4.3.2",
@@ -91,23 +87,23 @@
     "@types/karma-coverage": "^2.0.1",
     "@types/karma-jasmine": "^4.0.2",
     "@types/karma-jsdom-launcher": "^8.0.2",
-    "@types/marked": "^4.0.3",
-    "@types/node": "^20.2.5",
+    "@types/marked": "^4.3.1",
+    "@types/node": "^20.2.6",
     "@types/node-sass": "^4.11.3",
     "@types/path-browserify": "^1.0.0",
     "@types/prismjs": "^1.26.0",
-    "@types/three": "^0.152.0",
-    "@types/uuid": "^9.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.59.7",
-    "@typescript-eslint/parser": "^5.59.7",
-    "eslint": "^8.41.0",
+    "@types/three": "^0.152.1",
+    "@types/uuid": "^9.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
+    "@typescript-eslint/parser": "^5.59.9",
+    "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
-    "jasmine-core": "~4.6.0",
+    "jasmine-core": "~5.0.1",
     "karma": "~6.4.2",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
     "karma-jsdom-launcher": "^14.0.0",
     "lint-staged": "^13.2.2",
     "ng-packagr": "^15.2.2",
@@ -116,6 +112,6 @@
     "typescript": "<5.0.0",
     "unique-names-generator": "^4.7.1",
     "uuid": "^9.0.0",
-    "vite": "^4.3.8"
+    "vite": "^4.3.9"
   }
 }
