--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
+    "@angular-eslint/eslint-plugin": "^16.0.3",
     "@angular/animations": "^15.2.8",
     "@angular/common": "^15.2.8",
     "@angular/compiler": "^15.2.8",
@@ -98,7 +99,7 @@
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
     "angular-cli-ghpages": "^1.0.6",
-    "eslint": "^8.42.0",
+    "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
     "jasmine-core": "~5.0.1",
