--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     "json-server": "cd backend && json-server --watch db_v2.json",
     "start": "ng serve  --watch",
     "test": "ng test",
-    "test:nyc": "nyc --reporter=html --produce-source-map --reporter=text npm test"
+    "test:nyc": "nyc --reporter=html --produce-source-map --reporter=text npm test",
+    "clear-cache": "rm -rf .angular/cache"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
-    "@angular-eslint/eslint-plugin": "^16.0.3",
+    "@angular-eslint/eslint-plugin": "^15.0.3",
     "@angular/animations": "^15.2.8",
     "@angular/common": "^15.2.8",
     "@angular/compiler": "^15.2.8",
@@ -84,7 +85,7 @@
     "@types/eslint": "^8.40.2",
     "@types/eslint-config-prettier": "^6.11.0",
     "@types/express": "^4.17.17",
-    "@types/jasmine": "~4.3.4",
+    "@types/jasmine": "~4.3.5",
     "@types/jquery": "^3.5.16",
     "@types/json-server": "^0.14.4",
     "@types/karma-coverage": "^2.0.1",
@@ -97,19 +98,19 @@
     "@types/prismjs": "^1.26.0",
     "@types/three": "^0.152.1",
     "@types/uuid": "^9.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.59.11",
-    "@typescript-eslint/parser": "^5.59.11",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
     "angular-cli-ghpages": "^1.0.6",
-    "eslint": "^8.43.0",
+    "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
     "jasmine-core": "~5.0.1",
     "karma": "~6.4.2",
-    "karma-coverage": "~2.2.0",
+    "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "karma-jsdom-launcher": "^14.0.0",
-    "lint-staged": "^13.2.2",
+    "lint-staged": "^13.2.3",
     "ng-packagr": "^15.2.2",
     "nyc": "^15.1.0",
     "prettier": "2.8.8",
