--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,29 +2,41 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "ng serve",
+      "name": "ng Firefox debug",
       "type": "firefox",
       "request": "launch",
-      "preLaunchTask": "npm: start",
-      "url": "http://localhost:4200",
-      "webRoot": "${workspaceFolder}"
+      "port": 9222,
+      "url": "http://localhost:4200/",
+      "reAttach": true,
+      "webRoot": "${workspaceRoot}/src"
+    },
+    {
+      "name": "ng Chrome debug",
+      "type": "chrome",
+      "request": "attach",
+      "port": 9222,
+      "sourceMaps": true,
+      "webRoot": "${workspaceRoot}/src",
+      "url": "http://localhost:4200/",
+      "sourceMapPathOverrides": {
+        "webpack:///*": "/*"
+      }
     },
     {
       "name": "ng test",
       "type": "firefox",
       "request": "launch",
       "url": "http://localhost:9876/debug.html",
-      "webRoot": "${workspaceFolder}",
-      "sourceMapPathOverrides": {
-        "./src/*": "${workspaceFolder}/src/*"
-      }
+      "webRoot": "${workspaceFolder}"
     },
     {
       "name": "ng e2e",
       "type": "node",
       "request": "launch",
       "program": "${workspaceFolder}/node_modules/protractor/bin/protractor",
-      "args": ["${workspaceFolder}/e2e/protractor.conf.js"]
+      "args": [
+        "${workspaceFolder}/e2e/protractor.conf.js"
+      ]
     }
   ]
 }
