--- a/package.json
+++ b/package.json
@@ -1,125 +1,125 @@
 {
-  "name": "3d-inventory-angular-ui",
-  "version": "0.3.6",
-  "private": true,
-  "browser": {
-    "fs": false,
-    "path": false,
-    "os": false,
-    "buffer": false,
-    "process": false
-  },
-  "scripts": {
-    "build": "cp -f README.md src/assets && ng build --watch",
-    "clear-all": "npm run clear-cache && npm run clear-dist",
-    "clear-cache": "rm -rf .angular/cache",
-    "clear-dist": "rm -rf dist",
-    "compodoc:build": "compodoc -p tsconfig.doc.json",
-    "compodoc:build-and-serve": "compodoc -p tsconfig.doc.json -s",
-    "compodoc:serve": "compodoc -s",
-    "cp": "cp -f README.md src/assets",
-    "json-server": "cd backend && json-server --watch db_v2.json",
-    "kill-ng": "killall \"ng serve\"",
-    "prepare": "husky install",
-    "prettier": "prettier --check src/**/*.ts",
-    "server": "lite-server --baseDir='dist/3d-inventory-angular-ui/browser'",
-    "start": "npm run clear-all && npm run cp && ng serve  --watch",
-    "test": "ng test",
-    "test:nyc": "nyc --reporter=html --produce-source-map --reporter=text npm test",
-    "update": "npm update && npm upgrade"
-  },
-  "lint-staged": {
-    "**/*": "prettier --write --ignore-unknown"
-  },
-  "dependencies": {
-    "@angular-eslint/eslint-plugin": "^16.1.0",
-    "@angular/animations": "^16.1.5",
-    "@angular/common": "^16.1.5",
-    "@angular/compiler": "^16.1.5",
-    "@angular/core": "^16.1.5",
-    "@angular/forms": "^16.1.5",
-    "@angular/material": "^16.1.5",
-    "@angular/platform-browser": "^16.1.5",
-    "@angular/platform-browser-dynamic": "^16.1.5",
-    "@angular/platform-server": "^16.1.5",
-    "@angular/router": "^16.1.5",
-    "@compodoc/compodoc": "^1.1.21",
-    "@ng-bootstrap/ng-bootstrap": "^15.1.0",
-    "@nguniversal/express-engine": "^16.1.1",
-    "@types/lodash": "^4.14.195",
-    "bootstrap": "^5.3.0",
-    "bootstrap-icons": "^1.10.5",
-    "chalk": "^5.3.0",
-    "cors": "^2.8.5",
-    "date-fns": "^2.30.0",
-    "depcheck": "^1.4.3",
-    "express": "^4.18.2",
-    "https-browserify": "^1.0.0",
-    "install": "^0.13.0",
-    "jquery": "^3.7.0",
-    "jsdom": "^22.1.0",
-    "json-server": "^0.17.3",
-    "karma-cli": "^2.0.0",
-    "karma-typescript": "^5.5.4",
-    "lodash": "^4.17.21",
-    "mkdirp": "^3.0.1",
-    "nav-bar": "^1.0.3",
-    "ngx-bootstrap": "^11.0.2",
-    "ngx-markdown": "^16.0.0",
-    "ngx-pagination": "^6.0.3",
-    "node-sass": "^9.0.0",
-    "npm-check-updates": "^16.10.15",
-    "path-browserify": "^1.0.1",
-    "prismjs": "^1.29.0",
-    "process": "^0.11.10",
-    "rimraf": "^5.0.1",
-    "rxjs": "^7.8.1",
-    "three": "^0.154.0",
-    "three-orbitcontrols-ts": "^0.1.2",
-    "tslib": "^2.6.0",
-    "winston": "^3.10.0",
-    "zone.js": "~0.13.1"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^16.1.4",
-    "@angular/cli": "^16.1.4",
-    "@angular/compiler-cli": "^16.1.5",
-    "@angular/localize": "^16.1.5",
-    "@types/cors": "^2.8.13",
-    "@types/eslint": "^8.44.0",
-    "@types/eslint-config-prettier": "^6.11.0",
-    "@types/express": "^4.17.17",
-    "@types/jasmine": "~4.3.5",
-    "@types/jquery": "^3.5.16",
-    "@types/json-server": "^0.14.4",
-    "@types/karma-coverage": "^2.0.1",
-    "@types/karma-jasmine": "^4.0.2",
-    "@types/karma-jsdom-launcher": "^8.0.2",
-    "@types/node": "^20.4.2",
-    "@types/node-sass": "^4.11.3",
-    "@types/path-browserify": "^1.0.0",
-    "@types/prismjs": "^1.26.0",
-    "@types/three": "^0.154.0",
-    "@types/uuid": "^9.0.2",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "angular-cli-ghpages": "^1.0.6",
-    "eslint": "^8.45.0",
-    "eslint-config-prettier": "^8.8.0",
-    "husky": "^8.0.3",
-    "jasmine-core": "~5.0.1",
-    "karma": "~6.4.2",
-    "karma-coverage": "~2.2.1",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "karma-jsdom-launcher": "^15.0.0",
-    "lint-staged": "^13.2.3",
-    "lite-server": "^2.6.1",
-    "ng-packagr": "^16.1.0",
-    "nyc": "^15.1.0",
-    "prettier": "3.0.0",
-    "typescript": "^5.1.6",
-    "unique-names-generator": "^4.7.1",
-    "uuid": "^9.0.0"
-  }
+	"name": "3d-inventory-angular-ui",
+	"version": "0.3.8",
+	"private": true,
+	"browser": {
+		"fs": false,
+		"path": false,
+		"os": false,
+		"buffer": false,
+		"process": false
+	},
+	"scripts": {
+		"clear:list": "rm -rf dist",
+		"clear:all": "npm run clear:cache && npm run clear:dist",
+		"clear:cache": "rm -rf .angular/cache",
+		"compodoc:build": "compodoc -p tsconfig.doc.json",
+		"compodoc:build-and-serve": "compodoc -p tsconfig.doc.json -s",
+		"compodoc:serve": "compodoc -s",
+		"cp": "cp -f README.md src/assets",
+		"prepare": "husky install",
+		"prettier": "prettier --check src/**/*.ts",
+		"server:build": "cp -f README.md src/assets && ng build --watch",
+		"server:json": "cd backend && json-server --watch db_v2.json",
+		"server:kill": "killall \"ng serve\"",
+		"server:lite": "lite-server --baseDir='dist/3d-inventory-angular-ui/browser'",
+		"server:ng": "npm run clear-all && npm run cp && ng serve  --watch",
+		"test": "ng test",
+		"test:nyc": "nyc --reporter=html --produce-source-map --reporter=text npm test",
+		"update": "npm-check-updates -u && npm update && npm upgrade"
+	},
+	"lint-staged": {
+		"**/*": "prettier --write --ignore-unknown"
+	},
+	"dependencies": {
+		"@angular-eslint/eslint-plugin": "^16.1.0",
+		"@angular/animations": "^16.1.6",
+		"@angular/common": "^16.1.6",
+		"@angular/compiler": "^16.1.6",
+		"@angular/core": "^16.1.6",
+		"@angular/forms": "^16.1.6",
+		"@angular/material": "^16.1.5",
+		"@angular/platform-browser": "^16.1.6",
+		"@angular/platform-browser-dynamic": "^16.1.6",
+		"@angular/platform-server": "^16.1.6",
+		"@angular/router": "^16.1.6",
+		"@compodoc/compodoc": "^1.1.21",
+		"@ng-bootstrap/ng-bootstrap": "^15.1.0",
+		"@nguniversal/express-engine": "^16.1.1",
+		"@types/lodash": "^4.14.195",
+		"bootstrap": "^5.3.0",
+		"bootstrap-icons": "^1.10.5",
+		"chalk": "^5.3.0",
+		"cors": "^2.8.5",
+		"date-fns": "^2.30.0",
+		"depcheck": "^1.4.3",
+		"express": "^4.18.2",
+		"https-browserify": "^1.0.0",
+		"install": "^0.13.0",
+		"jquery": "^3.7.0",
+		"jsdom": "^22.1.0",
+		"json-server": "^0.17.3",
+		"karma-cli": "^2.0.0",
+		"karma-typescript": "^5.5.4",
+		"lodash": "^4.17.21",
+		"mkdirp": "^3.0.1",
+		"nav-bar": "^1.0.3",
+		"ngx-bootstrap": "^11.0.2",
+		"ngx-markdown": "^16.0.0",
+		"ngx-pagination": "^6.0.3",
+		"node-sass": "^9.0.0",
+		"npm-check-updates": "^16.10.16",
+		"path-browserify": "^1.0.1",
+		"prismjs": "^1.29.0",
+		"process": "^0.11.10",
+		"rimraf": "^5.0.1",
+		"rxjs": "^7.8.1",
+		"three": "^0.154.0",
+		"three-orbitcontrols-ts": "^0.1.2",
+		"tslib": "^2.6.0",
+		"winston": "^3.10.0",
+		"zone.js": "~0.13.1"
+	},
+	"devDependencies": {
+		"@angular-devkit/build-angular": "^16.1.5",
+		"@angular/cli": "^16.1.5",
+		"@angular/compiler-cli": "^16.1.6",
+		"@angular/localize": "^16.1.6",
+		"@types/cors": "^2.8.13",
+		"@types/eslint": "^8.44.0",
+		"@types/eslint-config-prettier": "^6.11.0",
+		"@types/express": "^4.17.17",
+		"@types/jasmine": "~4.3.5",
+		"@types/jquery": "^3.5.16",
+		"@types/json-server": "^0.14.4",
+		"@types/karma-coverage": "^2.0.1",
+		"@types/karma-jasmine": "^4.0.2",
+		"@types/karma-jsdom-launcher": "^8.0.2",
+		"@types/node": "^20.4.3",
+		"@types/node-sass": "^4.11.3",
+		"@types/path-browserify": "^1.0.0",
+		"@types/prismjs": "^1.26.0",
+		"@types/three": "^0.154.0",
+		"@types/uuid": "^9.0.2",
+		"@typescript-eslint/eslint-plugin": "^6.1.0",
+		"@typescript-eslint/parser": "^6.1.0",
+		"angular-cli-ghpages": "^1.0.6",
+		"eslint": "^8.45.0",
+		"eslint-config-prettier": "^8.8.0",
+		"husky": "^8.0.3",
+		"jasmine-core": "~5.0.1",
+		"karma": "~6.4.2",
+		"karma-coverage": "~2.2.1",
+		"karma-jasmine": "~5.1.0",
+		"karma-jasmine-html-reporter": "~2.1.0",
+		"karma-jsdom-launcher": "^15.0.0",
+		"lint-staged": "^13.2.3",
+		"lite-server": "^2.6.1",
+		"ng-packagr": "^16.1.0",
+		"nyc": "^15.1.0",
+		"prettier": "3.0.0",
+		"typescript": "^5.1.6",
+		"unique-names-generator": "^4.7.1",
+		"uuid": "^9.0.0"
+	}
 }
