--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
 	"name": "3d-inventory-angular-ui",
 	"version": "0.3.9",
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm version patch --force"
+    }
+  },
 	"private": true,
 	"browser": {
 		"fs": false,
