--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
 	"name": "3d-inventory-angular-ui",
-	"version": "0.3.9",
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm version patch --force"
-    }
-  },
+	"version": "0.3.10",
+	"husky": {
+		"hooks": {
+			"pre-commit": "npm --no-git-tag-version version patch && git add ."
+		}
+	},
 	"private": true,
 	"browser": {
 		"fs": false,
