--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3d-inventory-angular-ui",
-  "version": "0.3.17",
+  "version": "0.3.18",
   "private": true,
   "browser": {
     "fs": false,
@@ -76,6 +76,7 @@
     "rxjs": "^7.8.1",
     "three": "^0.154.0",
     "three-orbitcontrols-ts": "^0.1.2",
+    "ts-sync-request": "^1.4.1",
     "tslib": "^2.6.0",
     "winston": "^3.10.0",
     "zone.js": "~0.13.1"
