--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3d-inventory-angular-ui",
-  "version": "0.3.22",
+  "version": "0.3.25",
   "private": true,
   "browser": {
     "fs": false,
@@ -44,6 +44,7 @@
     "@angular/platform-server": "^16.1.6",
     "@angular/router": "^16.1.6",
     "@compodoc/compodoc": "^1.1.21",
+    "@faker-js/faker": "^8.0.2",
     "@ng-bootstrap/ng-bootstrap": "^15.1.0",
     "@nguniversal/express-engine": "^16.1.1",
     "@types/lodash": "^4.14.195",
