--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3d-inventory-angular-ui",
-  "version": "0.3.32",
+  "version": "0.3.34",
   "private": true,
   "browser": {
     "fs": false,
@@ -17,7 +17,6 @@
     "compodoc:build-and-serve": "compodoc -p tsconfig.doc.json -s",
     "compodoc:serve": "compodoc -s",
     "cp": "cp -f README.md src/assets",
-    "prepare": "husky install",
     "prettier": "prettier --check src/**/*.ts",
     "server:build": "cp -f README.md src/assets && ng build --watch",
     "server:json": "cd backend && json-server --watch db_v2.json",
@@ -26,13 +25,15 @@
     "server:ng": "npm run clear:all && npm run cp && ng serve  --watch",
     "test": "ng test",
     "test:nyc": "nyc --reporter=html --produce-source-map --reporter=text npm test",
-    "update": "npm-check-updates -u && npm update && npm upgrade"
+    "update": "npm-check-updates -u && npm update && npm upgrade",
+    "start": "concurrently --kill-others \"npm run server:ng\" \"npm run server:json\""
+
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
-    "@angular-eslint/eslint-plugin": "^16.1.0",
+    "@angular-eslint/eslint-plugin": "^16.1.1",
     "@angular/animations": "^16.2.1",
     "@angular/common": "^16.2.1",
     "@angular/compiler": "^16.2.1",
@@ -53,7 +54,7 @@
     "chalk": "^5.3.0",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
-    "depcheck": "^1.4.3",
+    "depcheck": "^1.4.5",
     "express": "^4.18.2",
     "https-browserify": "^1.0.0",
     "install": "^0.13.0",
@@ -102,12 +103,11 @@
     "@types/prismjs": "^1.26.0",
     "@types/three": "^0.155.0",
     "@types/uuid": "^9.0.2",
-    "@typescript-eslint/eslint-plugin": "^6.4.0",
-    "@typescript-eslint/parser": "^6.4.0",
+    "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "@typescript-eslint/parser": "^6.4.1",
     "angular-cli-ghpages": "^1.0.6",
     "eslint": "^8.47.0",
     "eslint-config-prettier": "^9.0.0",
-    "husky": "^8.0.3",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.2",
     "karma-coverage": "~2.2.1",
@@ -115,7 +115,7 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "karma-jsdom-launcher": "^15.0.0",
     "lil-gui": "^0.18.2",
-    "lint-staged": "^14.0.0",
+    "lint-staged": "^14.0.1",
     "lite-server": "^2.6.1",
     "ng-packagr": "^16.2.0",
     "nyc": "^15.1.0",
