--- a/devfile.yaml
+++ b/devfile.yaml
@@ -1,69 +1,51 @@
-commands:
-- exec:
-    commandLine: npm install
-    component: runtime
-    group:
-      isDefault: true
-      kind: build
-    workingDir: ${PROJECT_SOURCE}
-  id: install
-- exec:
-    commandLine: npm start
-    component: runtime
-    group:
-      isDefault: true
-      kind: run
-    workingDir: ${PROJECT_SOURCE}
-  id: run
-- exec:
-    commandLine: npm run debug
-    component: runtime
-    group:
-      isDefault: true
-      kind: debug
-    workingDir: ${PROJECT_SOURCE}
-  id: debug
-- exec:
-    commandLine: npm test
-    component: runtime
-    group:
-      isDefault: true
-      kind: test
-    workingDir: ${PROJECT_SOURCE}
-  id: test
-components:
-- container:
-    args:
-    - tail
-    - -f
-    - /dev/null
-    endpoints:
-    - name: http-node
-      targetPort: 3000
-    - exposure: none
-      name: debug
-      targetPort: 5858
-    env:
-    - name: DEBUG_PORT
-      value: "5858"
-    image: registry.access.redhat.com/ubi8/nodejs-16:latest
-    memoryLimit: 2024Mi
-    mountSources: true
-  name: runtime
-metadata:
-  description: Node.js 16 application
-  displayName: inventory-3d-angular
-  icon: https://nodejs.org/static/images/logos/nodejs-new-pantone-black.svg
-  language: JavaScript
-  name: inventory-3d-angular
-  projectType: Node.js
-  tags:
-  - Node.js
-  - ubi8
-  version: 2.1.1
 schemaVersion: 2.1.0
+metadata:
+  name: nodejs-angular
+  displayName: Angular
+  description:
+    "Angular is a development platform, built on TypeScript. As a platform, Angular includes: A component-based
+    framework for building scalable web applications A collection of well-integrated libraries that cover a wide
+    variety of features, including routing, forms management, client-server communication, and more A suite of
+    developer tools to help you develop, build, test, and update your code"
+  icon: https://raw.githubusercontent.com/devfile-samples/devfile-stack-icons/main/angular.svg
+  tags:
+    - Node.js
+    - Angular
+  projectType: Angular
+  language: TypeScript
+  provider: Red Hat
+  version: 2.0.2
 starterProjects:
-- git:
-    remotes:
-      origin: https://github.com/odo-devfiles/nodejs-ex.git
-  name: nodejs-starter
+  - name: nodejs-angular-starter
+    git:
+      checkoutFrom:
+        revision: main
+      remotes:
+        origin: https://github.com/devfile-samples/devfile-stack-nodejs-angular.git
+components:
+  - container:
+      endpoints:
+        - name: http-angular
+          targetPort: 4200
+      image: registry.access.redhat.com/ubi8/nodejs-16:1-105.1684740145
+      args: ["tail", "-f", "/dev/null"]
+      memoryLimit: 1024Mi
+    name: runtime
+commands:
+  - exec:
+      commandLine: npm install
+      component: runtime
+      group:
+        isDefault: true
+        kind: build
+      workingDir: ${PROJECT_SOURCE}
+    id: install
+  - exec:
+      commandLine: npm run start
+      component: runtime
+      group:
+        isDefault: true
+        kind: run
+      hotReloadCapable: true
+      workingDir: ${PROJECT_SOURCE}
+    id: run
