--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3d-inventory-angular-ui",
-  "version": "0.3.34",
+  "version": "0.3.35",
   "private": true,
   "browser": {
     "fs": false,
@@ -22,12 +22,11 @@
     "server:json": "cd backend && json-server --watch db_v2.json",
     "server:kill": "killall \"ng serve\"",
     "server:lite": "lite-server --baseDir='dist/3d-inventory-angular-ui/browser'",
-    "server:ng": "npm run clear:all && npm run cp && ng serve  --watch",
+    "server:ng": "npm run clear:all && npm run cp && ng serve --host 0.0.0.0  --watch",
     "test": "ng test",
     "test:nyc": "nyc --reporter=html --produce-source-map --reporter=text npm test",
     "update": "npm-check-updates -u && npm update && npm upgrade",
     "start": "concurrently --kill-others \"npm run server:ng\" \"npm run server:json\""
-
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
