--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "compodoc:serve": "compodoc -s",
     "cp": "cp -f README.md src/assets",
     "prettier": "prettier --check src/**/*.ts",
-    "server:build": "cp -f README.md src/assets && ng build --watch",
+    "server:build": "npm run cp && ng build --watch",
     "server:json": "cd backend && json-server --watch db_v2.json",
     "server:kill": "killall \"ng serve\"",
     "server:lite": "lite-server --baseDir='dist/3d-inventory-angular-ui/browser'",
@@ -26,40 +26,43 @@
     "test": "ng test",
     "test:nyc": "nyc --reporter=html --produce-source-map --reporter=text npm test",
     "update": "npm-check-updates -u && npm update && npm upgrade",
-    "start": "concurrently --kill-others \"npm run server:ng\" \"npm run server:json\""
+    "start": "concurrently --kill-others \"npm run server:ng\" \"npm run server:json\"",
+    "github:issues": "MAX_NUM=`gh issue list --limit 1 --json number | jq \".[].number\"`; for n in `seq 1 $MAX_NUM`; do gh issue view $n --json assignees,author,body,closed,closedAt,comments,createdAt,id,labels,milestone,number,projectCards,reactionGroups,state,title,updatedAt,url >> github-dump.json; done",
+    "github:issues2": "gh issue list --limit 10000 --state open --json number,title,assignees,state,url | jq  -r '[\"number\",\"title\",\"assignees\",\"state\",\"url\"], (.[] | [.number, .titlex!, (.assignees | if .|length==0 then \"Unassigned\" elif .|length>1 then map(.login)|join(\",\") else .[].login end) , .state, .url]) | @tsv' > issues-$(date '+%Y-%m-%d').tsv"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
-    "@angular-eslint/eslint-plugin": "^16.1.1",
-    "@angular/animations": "^16.2.1",
-    "@angular/common": "^16.2.1",
-    "@angular/compiler": "^16.2.1",
-    "@angular/core": "^16.2.1",
-    "@angular/forms": "^16.2.1",
-    "@angular/material": "^16.2.1",
-    "@angular/platform-browser": "^16.2.1",
-    "@angular/platform-browser-dynamic": "^16.2.1",
-    "@angular/platform-server": "^16.2.1",
-    "@angular/router": "^16.2.1",
-    "@compodoc/compodoc": "^1.1.21",
-    "@faker-js/faker": "^8.0.2",
-    "@ng-bootstrap/ng-bootstrap": "^15.1.1",
+    "@angular-eslint/eslint-plugin": "^16.2.0",
+    "@angular/animations": "^16.2.12",
+    "@angular/common": "^16.2.12",
+    "@angular/compiler": "^16.2.12",
+    "@angular/core": "^16.2.12",
+    "@angular/forms": "^16.2.12",
+    "@angular/material": "^16.2.11",
+    "@angular/platform-browser": "^16.2.12",
+    "@angular/platform-browser-dynamic": "^16.2.12",
+    "@angular/platform-server": "^16.2.12",
+    "@angular/router": "^16.2.12",
+    "@aws-amplify/cli": "^12.8.2",
+    "@compodoc/compodoc": "^1.1.22",
+    "@faker-js/faker": "^8.3.1",
+    "@ng-bootstrap/ng-bootstrap": "^15.1.2",
     "@nguniversal/express-engine": "^16.2.0",
-    "@types/lodash": "^4.14.197",
-    "bootstrap": "^5.3.1",
-    "bootstrap-icons": "^1.10.5",
+    "@types/lodash": "^4.14.202",
+    "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.2",
     "chalk": "^5.3.0",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
-    "depcheck": "^1.4.5",
+    "depcheck": "^1.4.7",
     "express": "^4.18.2",
     "https-browserify": "^1.0.0",
     "install": "^0.13.0",
-    "jquery": "^3.7.0",
+    "jquery": "^3.7.1",
     "jsdom": "^22.1.0",
-    "json-server": "^0.17.3",
+    "json-server": "^0.17.4",
     "karma-cli": "^2.0.0",
     "karma-typescript": "^5.5.4",
     "lodash": "^4.17.21",
@@ -69,62 +72,60 @@
     "ngx-markdown": "^16.0.0",
     "ngx-pagination": "^6.0.3",
     "node-sass": "^9.0.0",
-    "npm-check-updates": "^16.12.2",
+    "npm-check-updates": "^16.14.11",
     "path-browserify": "^1.0.1",
     "prismjs": "^1.29.0",
     "process": "^0.11.10",
-    "rimraf": "^5.0.1",
-
+    "rimraf": "^5.0.5",
     "rxjs": "~7.8.1",
-    "three": "^0.156.1",
-
+    "three": "^0.158.0",
     "three-orbitcontrols-ts": "^0.1.2",
     "ts-sync-request": "^1.4.1",
     "tslib": "^2.6.2",
-    "winston": "^3.10.0",
-    "zone.js": "~0.14.0"
+    "winston": "^3.11.0",
+    "zone.js": "^0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.0",
-    "@angular/cli": "^16.2.0",
-    "@angular/compiler-cli": "^16.2.1",
-    "@angular/localize": "^16.2.1",
-    "@types/cors": "^2.8.13",
-    "@types/eslint": "^8.44.2",
-    "@types/eslint-config-prettier": "^6.11.0",
-    "@types/express": "^4.17.17",
-    "@types/jasmine": "~5.1.0",
-    "@types/jquery": "^3.5.16",
-    "@types/json-server": "^0.14.4",
-    "@types/karma-coverage": "^2.0.1",
-    "@types/karma-jasmine": "^4.0.2",
-    "@types/karma-jsdom-launcher": "^8.0.2",
-    "@types/node": "^20.5.1",
-    "@types/node-sass": "^4.11.3",
-    "@types/path-browserify": "^1.0.0",
-    "@types/prismjs": "^1.26.0",
-    "@types/three": "^0.156.0",
-    "@types/uuid": "^9.0.2",
-    "@typescript-eslint/eslint-plugin": "^6.4.1",
-    "@typescript-eslint/parser": "^6.4.1",
-    "angular-cli-ghpages": "^1.0.6",
-    "eslint": "^8.47.0",
+    "@angular-devkit/build-angular": "^16.2.9",
+    "@angular/cli": "^16.2.9",
+    "@angular/compiler-cli": "^16.2.12",
+    "@angular/localize": "^16.2.12",
+    "@types/cors": "^2.8.16",
+    "@types/eslint": "^8.44.7",
+    "@types/eslint-config-prettier": "^6.11.3",
+    "@types/express": "^4.17.21",
+    "@types/jasmine": "~5.1.1",
+    "@types/jquery": "^3.5.26",
+    "@types/json-server": "^0.14.6",
+    "@types/karma-coverage": "^2.0.2",
+    "@types/karma-jasmine": "^4.0.4",
+    "@types/karma-jsdom-launcher": "^8.0.4",
+    "@types/node": "^20.8.10",
+    "@types/node-sass": "^4.11.6",
+    "@types/path-browserify": "^1.0.1",
+    "@types/prismjs": "^1.26.2",
+    "@types/three": "^0.158.1",
+    "@types/uuid": "^9.0.6",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
+    "angular-cli-ghpages": "^1.0.7",
+    "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
-    "jasmine-core": "~5.1.0",
+    "jasmine-core": "~5.1.1",
     "karma": "~6.4.2",
     "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "karma-jsdom-launcher": "^15.0.0",
-    "lil-gui": "^0.18.2",
-    "lint-staged": "^14.0.1",
+    "lil-gui": "^0.19.1",
+    "lint-staged": "^15.0.2",
     "lite-server": "^2.6.1",
-    "ng-packagr": "^16.2.0",
+    "ng-packagr": "^16.2.3",
     "nyc": "^15.1.0",
     "prettier": "3.0.3",
     "three": "^0.156.1",
     "typescript": "^5.1.6",
     "unique-names-generator": "^4.7.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.1"
   }
 }
