--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3d-inventory-angular-ui",
-  "version": "0.3.35",
+  "version": "0.3.37",
   "private": true,
   "browser": {
     "fs": false,
@@ -10,46 +10,50 @@
     "process": false
   },
   "scripts": {
-    "clear:dist": "rm -rf dist",
-    "clear:all": "npm run clear:cache && npm run clear:dist",
+    "build": "ng build 3d-inventory-angular-ui",
+    "clear:all": "npm run clear:cache && npm run clear:dist && npm run clear:node_install",
     "clear:cache": "rm -rf .angular/cache",
+    "clear:dist": "rm -rf dist",
+    "clear:node_install": "rm -rf node_modules",
     "compodoc:build": "compodoc -p tsconfig.doc.json",
     "compodoc:build-and-serve": "compodoc -p tsconfig.doc.json -s",
     "compodoc:serve": "compodoc -s",
     "cp": "cp -f README.md src/assets",
+    "github:issues": "MAX_NUM=`gh issue list --limit 1 --json number | jq \".[].number\"`; for n in `seq 1 $MAX_NUM`; do gh issue view $n --json assignees,author,body,closed,closedAt,comments,createdAt,id,labels,milestone,number,projectCards,reactionGroups,state,title,updatedAt,url >> github-dump.json; done",
+    "github:issues2": "gh issue list --limit 10000 --state open --json number,title,assignees,state,url | jq  -r '[\"number\",\"title\",\"assignees\",\"state\",\"url\"], (.[] | [.number, .titlex!, (.assignees | if .|length==0 then \"Unassigned\" elif .|length>1 then map(.login)|join(\",\") else .[].login end) , .state, .url]) | @tsv' > issues-$(date '+%Y-%m-%d').tsv",
+    "podman:build": "podman build -t 3d-inventory:0.1 .",
+    "podman:clear": "podman rmi --all --force",
+    "podman:run": "podman run -p 4000:80 --name 3d-inventory 3d-inventory:0.1",
+    "podman:tag": "podman tag 3d-inventory:0.1 eu.gcr.io/bloggyboots/app:0.1",
     "prettier": "prettier --check src/**/*.ts",
-    "server:build": "npm run cp && ng build --watch",
     "server:json": "cd backend && json-server --watch db_v2.json",
     "server:kill": "killall \"ng serve\"",
     "server:lite": "lite-server --baseDir='dist/3d-inventory-angular-ui/browser'",
     "server:ng": "npm run clear:all && npm run cp && ng serve --host 0.0.0.0  --watch",
+    "server:run": "npm run cp && ng build --watch",
+    "start": "concurrently --kill-others \"npm run server:ng\" \"npm run server:json\"",
     "test": "ng test",
     "test:nyc": "nyc --reporter=html --produce-source-map --reporter=text npm test",
-    "update": "npm-check-updates -u && npm update && npm upgrade",
-    "start": "concurrently --kill-others \"npm run server:ng\" \"npm run server:json\"",
-    "github:issues": "MAX_NUM=`gh issue list --limit 1 --json number | jq \".[].number\"`; for n in `seq 1 $MAX_NUM`; do gh issue view $n --json assignees,author,body,closed,closedAt,comments,createdAt,id,labels,milestone,number,projectCards,reactionGroups,state,title,updatedAt,url >> github-dump.json; done",
-    "github:issues2": "gh issue list --limit 10000 --state open --json number,title,assignees,state,url | jq  -r '[\"number\",\"title\",\"assignees\",\"state\",\"url\"], (.[] | [.number, .titlex!, (.assignees | if .|length==0 then \"Unassigned\" elif .|length>1 then map(.login)|join(\",\") else .[].login end) , .state, .url]) | @tsv' > issues-$(date '+%Y-%m-%d').tsv"
+    "update": "npm-check-updates -u && npm update && npm upgrade"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
-    "@angular-eslint/eslint-plugin": "^16.2.0",
-    "@angular/animations": "^16.2.12",
-    "@angular/common": "^16.2.12",
-    "@angular/compiler": "^16.2.12",
-    "@angular/core": "^16.2.12",
-    "@angular/forms": "^16.2.12",
-    "@angular/material": "^16.2.11",
-    "@angular/platform-browser": "^16.2.12",
-    "@angular/platform-browser-dynamic": "^16.2.12",
-    "@angular/platform-server": "^16.2.12",
-    "@angular/router": "^16.2.12",
+    "@angular-eslint/eslint-plugin": "^17.1.0",
+    "@angular/animations": "^16.0.0",
+    "@angular/common": "^16.0.0",
+    "@angular/compiler": "^16.0.0",
+    "@angular/core": "^16.0.0",
+    "@angular/forms": "^16.0.0",
+    "@angular/platform-browser": "^16.0.0",
+    "@angular/platform-browser-dynamic": "^16.0.0",
+    "@angular/platform-server": "^16.0.0",
+    "@angular/router": "^16.0.0",
     "@aws-amplify/cli": "^12.8.2",
-    "@compodoc/compodoc": "^1.1.22",
+    "@compodoc/compodoc": "^1.1.23",
     "@faker-js/faker": "^8.3.1",
-    "@ng-bootstrap/ng-bootstrap": "^15.1.2",
-    "@nguniversal/express-engine": "^16.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^15.0.0",
     "@types/lodash": "^4.14.202",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.2",
@@ -71,6 +75,7 @@
     "ngx-bootstrap": "^11.0.2",
     "ngx-markdown": "^16.0.0",
     "ngx-pagination": "^6.0.3",
+    "node-gyp": "^10.0.1",
     "node-sass": "^9.0.0",
     "npm-check-updates": "^16.14.11",
     "path-browserify": "^1.0.1",
@@ -83,33 +88,33 @@
     "ts-sync-request": "^1.4.1",
     "tslib": "^2.6.2",
     "winston": "^3.11.0",
-    "zone.js": "^0.14.2"
+    "zone.js": "^0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.9",
-    "@angular/cli": "^16.2.9",
-    "@angular/compiler-cli": "^16.2.12",
-    "@angular/localize": "^16.2.12",
-    "@types/cors": "^2.8.16",
+    "@angular-devkit/build-angular": "^16.0.0",
+    "@angular/cli": "^16.0.0",
+    "@angular/compiler-cli": "^16.0.0",
+    "@angular/localize": "^16.0.0",
+    "@types/cors": "^2.8.17",
     "@types/eslint": "^8.44.7",
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/express": "^4.17.21",
-    "@types/jasmine": "~5.1.1",
-    "@types/jquery": "^3.5.26",
-    "@types/json-server": "^0.14.6",
-    "@types/karma-coverage": "^2.0.2",
-    "@types/karma-jasmine": "^4.0.4",
-    "@types/karma-jsdom-launcher": "^8.0.4",
-    "@types/node": "^20.8.10",
-    "@types/node-sass": "^4.11.6",
-    "@types/path-browserify": "^1.0.1",
-    "@types/prismjs": "^1.26.2",
-    "@types/three": "^0.158.1",
-    "@types/uuid": "^9.0.6",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
+    "@types/jasmine": "~5.1.4",
+    "@types/jquery": "^3.5.29",
+    "@types/json-server": "^0.14.7",
+    "@types/karma-coverage": "^2.0.3",
+    "@types/karma-jasmine": "^4.0.5",
+    "@types/karma-jsdom-launcher": "^8.0.5",
+    "@types/node": "^20.10.0",
+    "@types/node-sass": "^4.11.7",
+    "@types/path-browserify": "^1.0.2",
+    "@types/prismjs": "^1.26.3",
+    "@types/three": "^0.158.3",
+    "@types/uuid": "^9.0.7",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/parser": "^6.12.0",
     "angular-cli-ghpages": "^1.0.7",
-    "eslint": "^8.53.0",
+    "eslint": "^8.54.0",
     "eslint-config-prettier": "^9.0.0",
     "jasmine-core": "~5.1.1",
     "karma": "~6.4.2",
@@ -118,13 +123,13 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "karma-jsdom-launcher": "^15.0.0",
     "lil-gui": "^0.19.1",
-    "lint-staged": "^15.0.2",
+    "lint-staged": "^15.1.0",
     "lite-server": "^2.6.1",
-    "ng-packagr": "^16.2.3",
+    "ng-packagr": "^16.0.0",
     "nyc": "^15.1.0",
-    "prettier": "3.0.3",
-    "three": "^0.156.1",
-    "typescript": "^5.1.6",
+    "prettier": "3.1.0",
+    "three": "^0.158.0",
+    "typescript": "^4.9.0",
     "unique-names-generator": "^4.7.1",
     "uuid": "^9.0.1"
   }
