--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3d-inventory-angular-ui",
-  "version": "0.3.37",
+  "version": "0.3.38",
   "private": true,
   "browser": {
     "fs": false,
@@ -115,7 +115,11 @@
     "@typescript-eslint/parser": "^6.12.0",
     "angular-cli-ghpages": "^1.0.7",
     "eslint": "^8.54.0",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-config-standard": "17.1.0",
+    "eslint-plugin-import": "2.29.0",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-standard": "5.0.0",
     "jasmine-core": "~5.1.1",
     "karma": "~6.4.2",
     "karma-coverage": "~2.2.1",
